# Alloy

./: .appveyor.yml  .clang-format  .clang-tidy  .codedocs  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.txt  README.md  conanfile.py
extra/: CMakeLists.txt
extra/allocators/: CMakeLists.txt  README.md
extra/allocators/include/alloy/extra/allocators/: freelist.hpp  memory_arena.hpp  memory_arena_cache.hpp  pointer_util.hpp
extra/allocators/src/alloy/extra/allocators/: memory_arena_cache.cpp
extra/logging/: CMakeLists.txt  README.md
extra/logging/example/: CMakeLists.txt
extra/logging/example/src/: main.cpp
extra/logging/include/alloy/extra/logging/: console_log_stream.hpp  file_log_stream.hpp  log_filter.hpp  log_level.hpp  logger.hpp
extra/logging/src/alloy/extra/logging/: console_log_stream.cpp  file_log_stream.cpp  logger.cpp
extra/sdl2-bindings/: CMakeLists.txt  README.md
extra/sdl2-bindings/example/sdl2-window/: CMakeLists.txt
extra/sdl2-bindings/example/sdl2-window/src/: main.cpp
extra/sdl2-bindings/example/sdl2-window/src/gl/: active_program.hpp  error.hpp  program.hpp  shader.hpp  vertex_attribute_map.hpp
extra/sdl2-bindings/include/alloy/extra/sdl2-bindings/: api.hpp  sdl2_gl_window.hpp  sdl2_pump_source.hpp  sdl2_window.hpp
extra/sdl2-bindings/src/alloy/extra/sdl2-bindings/: sdl2_gl_window.cpp  sdl2_pump_source.cpp  sdl2_window.cpp
extra/use-discrete-gpu/: CMakeLists.txt  README.md
extra/use-discrete-gpu/src/: use_discrete.cpp
extra/win32-bindings/: CMakeLists.txt  README.md
extra/win32-bindings/example/filesystem-watcher/: CMakeLists.txt  README.md
extra/win32-bindings/example/filesystem-watcher/src/: main.cpp
extra/win32-bindings/include/alloy/extra/win32-bindings/: api.hpp  win32_filesystem_monitor.hpp
extra/win32-bindings/src/alloy/extra/win32-bindings/: win32_filesystem_monitor.cpp  windows.hpp
lib/alloy-core/: CMakeLists.txt  README.md
lib/alloy-core/benchmark/: CMakeLists.txt
lib/alloy-core/benchmark/src/: main.cpp
lib/alloy-core/cmake/: config.hpp.in
lib/alloy-core/include/alloy/core/: angle.hpp  api.hpp  assert.hpp  clamped.hpp  interpolation.hpp  intrinsics.hpp  macros.hpp  math.hpp  math_constants.hpp  matrix.hpp  precision.hpp  quaternion.hpp  saturated.hpp  simplex.hpp  source_location.hpp  trigonometry.hpp  type_index.hpp  types.hpp  vector.hpp
lib/alloy-core/include/alloy/core/algorithms/: compare_reduce.hpp  max.hpp  min.hpp
lib/alloy-core/include/alloy/core/angle/: basic_angle.hpp  degree.hpp  gradian.hpp  radian.hpp
lib/alloy-core/include/alloy/core/containers/: deque.hpp  forward_list.hpp  hash_map.hpp  hash_multimap.hpp  hash_multiset.hpp  hash_set.hpp  list.hpp  map.hpp  map_view.hpp  multimap.hpp  multiset.hpp  polymorphic_vector.hpp  priority_queue.hpp  queue.hpp  set.hpp  set_view.hpp  span.hpp  stack.hpp  string.hpp  vector.hpp
lib/alloy-core/include/alloy/core/geometry/: axis_aligned_box.hpp  frustum.hpp  intersection.hpp  line.hpp  line_segment.hpp  plane.hpp  point.hpp  point2.hpp  point3.hpp  polar.hpp  ray.hpp  sphere.hpp  spherical.hpp
lib/alloy-core/include/alloy/core/intrinsics/: clang.hpp  gcc.hpp  msvc.hpp
lib/alloy-core/include/alloy/core/math/: angle.hpp  basis.hpp  clamped.hpp  euler_angles.hpp  interpolation.hpp  math.hpp  math_constants.hpp  matrix.hpp  quaternion.hpp  quaternion_constants.hpp  saturated.hpp  simd.hpp  simplex.hpp  trigonometry.hpp  vector.hpp
lib/alloy-core/include/alloy/core/matrix/: matrix2.hpp  matrix3.hpp  matrix4.hpp  matrix_utilities.hpp
lib/alloy-core/include/alloy/core/memory/: allocator.hpp  capacity.hpp  data_quantity.hpp  lifetime_utilities.hpp  memory_resource.hpp  object_storage.hpp  observer_ptr.hpp  packed_buffer.hpp  unaligned.hpp
lib/alloy-core/include/alloy/core/model/: attribute_buffer_view.hpp  camera.hpp  color.hpp  color_constants.hpp  image.hpp  interpolated_transform.hpp  lazy_transform.hpp  mesh.hpp  normal.hpp  projection.hpp  texture_coordinate.hpp  transform.hpp  vertex.hpp
lib/alloy-core/include/alloy/core/precision/: fixed.hpp  half.hpp  real.hpp
lib/alloy-core/include/alloy/core/string/: hashed_string_view.hpp  string_tokenizer.hpp  string_utilities.hpp  string_view.hpp  zstring_view.hpp
lib/alloy-core/include/alloy/core/strings/: hashed_string_view.hpp  string.hpp  string_tokenizer.hpp  string_utilities.hpp  string_view.hpp  zstring_view.hpp
lib/alloy-core/include/alloy/core/thread/: thread_group.hpp
lib/alloy-core/include/alloy/core/traits/: always_false.hpp  common_reference.hpp  copy_cv.hpp  copy_cvref.hpp  detected.hpp  for_each_member.hpp  function_traits.hpp  is_function_pointer.hpp  select_nth.hpp
lib/alloy-core/include/alloy/core/utilities/: aligned_storage.hpp  casts.hpp  compare.hpp  ctor_function.hpp  delegate.hpp  enum_traits.hpp  event.hpp  expected.hpp  explicitly_copyable.hpp  fnv1a_hash.hpp  (+17 more)
lib/alloy-core/include/alloy/math/: interpolation.hpp  math.hpp  matrix.hpp  quaternion.hpp  simplex.hpp  vector.hpp
lib/alloy-core/src/alloy/core/: assert.cpp  quaternion.cpp  simplex.cpp  trigonometry.cpp  type_index.cpp
lib/alloy-core/src/alloy/math/: quaternion.cpp  simplex.cpp  trigonometry.cpp
lib/alloy-core/test/: CMakeLists.txt
lib/alloy-core/test/src/: main.cpp
lib/alloy-engine/: CMakeLists.txt  README.md
lib/alloy-engine/cmake/: config.hpp.in
lib/alloy-engine/include/alloy/engine/: component.hpp  component_manager.hpp  entity.hpp  entity_manager.hpp  frame_clock.hpp  signature.hpp
lib/alloy-engine/src/alloy/engine/: component_manager.cpp  entity_manager.cpp
lib/alloy-io/: CMakeLists.txt  README.md
lib/alloy-io/cmake/: config.hpp.in
lib/alloy-io/extra/sdl2/: CMakeLists.txt
lib/alloy-io/extra/win32/: CMakeLists.txt
lib/alloy-io/include/alloy/io/: api.hpp  event.hpp  keyboard.hpp  message_pump.hpp  sequence_detector.hpp  window.hpp
lib/alloy-io/src/alloy/io/: message_pump.cpp  window.cpp
lib/alloy-io/test/: CMakeLists.txt
lib/alloy-render/: CMakeLists.txt  README.md
lib/alloy-render-gl/: CMakeLists.txt
(+1255 files in other folders)
